Create very basic input and display sections for chat app

--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+	<div class="chat-area">
+		<ul class="chat-list">
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+			<li>Chat text goes here</li>
+		</ul>
+	</div>
+
+	<div class="chat-form">
+		<form class="chat-input">
+			<input type="text" class="chat-text">
+			<input type="submit" class="chat-submit">
+		</form>
+	</div>
 	
 </body>
 </html>
