--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Single Terminal Chat</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" href="">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
 	<script type="text/javascript" src="script.js"></script>
@@ -35,6 +36,5 @@
 			<input type="submit" class="chat-submit">
 		</form>
 	</div>
-	
 </body>
 </html>
