Add display of messages on page load

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 	<link rel="shortcut icon" href="">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
-	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div class="chat-area">
 		<ul class="chat-list">
-			<li>Chat text goes here</li>
+			<!-- <li>Chat text goes here</li> -->
 		</ul>
 	</div>
 
@@ -22,5 +21,6 @@
 			<input type="submit" class="chat-submit">
 		</form>
 	</div>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
