Change msg display to input fields to allow easier editing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="chat-form">
 		<form class="chat-input">
 			<input type="text" class="chat-text">
-			<input type="submit" class="chat-submit">
+			<input type="submit" class="chat-submit" value="Message">
 		</form>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
