--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 	<div class="chat-area">
 		<ul class="chat-list">
-			<!-- <li>Chat text goes here</li> -->
 		</ul>
 	</div>
 
@@ -20,6 +19,10 @@
 			<input type="text" class="chat-text">
 			<input type="submit" class="chat-submit" value="Message">
 		</form>
+	</div>
+	<div class="online-users">
+		<ul class="users-list">
+		</ul>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
