--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<div class="container">
+		<h1>SingTermChat</h1>
 		<div class="online-users">
 			<ul class="users-list">
 			</ul>
