--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
 <body>
 	<div class="container">
 		<h1>SingTermChat</h1>
+		<div class="chat-container">
+			<div class="chat-area">
+				<ul class="chat-list">
+				</ul>
+			</div>
+
+			<div class="chat-form">
+				<form class="chat-input">
+					<textarea class="chat-text"></textarea>
+					<input type="submit" class="chat-submit" value="Send">
+				</form>
+			</div>
+		</div>
+		
 		<div class="online-users">
 			<ul class="users-list">
 			</ul>
-		</div>
-
-		<div class="chat-area">
-			<ul class="chat-list">
-			</ul>
-		</div>
-
-		<div class="chat-form">
-			<form class="chat-input">
-				<input type="text" class="chat-text">
-				<input type="submit" class="chat-submit" value="Message">
-			</form>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> 
