Add font awesome trashcan icon to delete messages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Single Terminal Chat</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<script src="https://use.fontawesome.com/23c4f3b03e.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="shortcut icon" href="">
-
 </head>
 <body>
 	<div class="container">
