--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<div class="chat-form">
 				<form class="chat-input">
 					<textarea class="chat-text"></textarea>
-					<input type="submit" class="chat-submit" value="Send">
+					<input type="submit" class="chat-submit chat-button" value="Send">
+					<button class="mic chat-button"><i class="fa fa-microphone" aria-hidden="true"></i></button>
 				</form>
 			</div>
 		</div>
